--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,16 @@
-body {
-  margin: 0;
-  font: 14px;
-  flex: 1;
-  height:max-content;
+html{
+  min-height: 100%;
+  height: max-content;
   background-image: linear-gradient(
     to bottom right,
     rgb(18, 104, 114),
     rgb(1, 35, 40)
   );
+}
+body {
+  margin: 0;
+  font: 14px;
+  height:100%;
   width: 95%;
   margin-inline: auto;
   color: "#303030";
@@ -84,7 +87,7 @@ p {
 
 h1 {
   margin-top: 14px;
-  color: rgb(173, 173, 173);
+  color: rgb(200, 200, 200);
 }
 
 .container {
@@ -120,21 +123,32 @@ h1 {
 
 /* About Me Section on Home Page */
 .aboutHolder{
-    width: 50%;
+    width: 80%;
     margin-inline: auto;
     padding: 20px;
+    padding-inline: 100px;
     padding-right: 60px;
-    min-height: 230px;
+    height: auto;
     background-color: #282828;
     border-radius: 10px;
     box-shadow: #bbb9 4px 4px 10px 0px;
 }
 .aboutHolder h2{
+  position: absolute;
+  display: inline-block;
     color: turquoise;
+    transform: translateY(-20px);
+    left: 9%;
 }
 .aboutHolder p{
+  padding-top: 30px;;
     color: white;
     line-height: 30px;
+}
+.aboutHolder li{
+    color: white;
+    line-height: 30px;
+    
 }
 
 
